[tool.poetry]
name = "cftool"
version = "0.1.0"
description = ""
authors = ["erik aronesty <erik@q32.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pydantic = "^2.11.4"
python-dotenv = "^1.1.0"
pyyaml = "^6.0.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-xdist = "^3.6.1"
pytest-cov = "^6.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
